Chante Yes/No in quit panel to make it consistent with logout
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@36337 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2013-03-10 Riccardo Mottola <rm@gnu.org>
 
+	* GWorkspace/GWorkspace.m
+	Change Yes/No in quit panel to make it consistent with logout.
+
+2013-03-10 Riccardo Mottola <rm@gnu.org>
+
 	* GWorkspace/Finder/LiveSearch/LSFolder.h
 	* GWorkspace/Finder/LiveSearch/LSFolder.m
 	* GWorkspace/Finder/SearchResults/SearchResults.h
