NSUInteger transition and cleanups.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@36342 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2013-03-12 Riccardo Mottola <rm@gnu.org>
 
+	* GWorkspace/WorkspaceApplication.m
+	NSUInteger transition and cleanups.
+
+2013-03-12 Riccardo Mottola <rm@gnu.org>
+
 	* GWorkspace/WorkspaceApplication.m (startLogout)
 	Add logout timer to the Modal loop.
 
