Fix warning about missing protocol
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@36348 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2013-03-12 Riccardo Mottola <rm@gnu.org>
 
+	* GWorkspace/FileViewer/GWViewerIconsPath.h
+	Fix warning about missing protocol
+
+2013-03-12 Riccardo Mottola <rm@gnu.org>
+
+	* Tools/fswatcher/fswatcher.m
+	NSUInteger transition and indentation.
+
+2013-03-12 Riccardo Mottola <rm@gnu.org>
+
 	* Tools/fswatcher/fswatcher.h
 	* Tools/fswatcher/fswatcher.m
 	Fix typo.
