Replace addItemToMenu() with standard addItemWithTitle
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@36349 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-03-13 Riccardo Mottola <rm@gnu.org>
+
+	* GWorkspace/GWorkspace.m
+	Replace addItemToMenu() with standard addItemWithTitle
+
 2013-03-12 Riccardo Mottola <rm@gnu.org>
 
 	* GWorkspace/FileViewer/GWViewerIconsPath.h
