Remove addItemToMenu and MAKE_LOCALIZED_LABEL since they make using make_strings impossible
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@36351 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2013-03-13 Riccardo Mottola <rm@gnu.org>
 
+	* GWorkspace/GWFunctions.[h,m]
+	Remove addItemToMenu and MAKE_LOCALIZED_LABEL since they make using
+	make_strings impossible.
+
+2013-03-13 Riccardo Mottola <rm@gnu.org>
+
 	* GWorkspace/GWorkspace.m
 	Replace addItemToMenu() with standard addItemWithTitle
 
