Fix protocol warning
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@36382 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-03-18 Riccardo Mottola <rm@gnu.org>
+
+	* GWMetadata/MDKit/MDKAttributeEditor.h
+	Fix protocol warning.
+
 2013-03-13 Riccardo Mottola <rm@gnu.org>
 
 	* GWorkspace/GWFunctions.[h,m]
