--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2013-03-20 Riccardo Mottola <rm@gnu.org>
+
+	* Inspector/Annotations.m
+	* Inspector/Contents.m
+	* Inspector/Functions.h
+	Remove MAKE_LOCALIZED_LABEL and use MAKE_LABEL
+
 2013-03-18 Riccardo Mottola <rm@gnu.org>
 
 	* GWMetadata/MDKit/MDKAttributeEditor.h
