Fix protocol warning.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@36388 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2013-03-20 Riccardo Mottola <rm@gnu.org>
 
+	* GWMetadata/MDKit/MDKAttributeEditor.h
+	Fix protocol warning.
+
+2013-03-20 Riccardo Mottola <rm@gnu.org>
+
 	* Inspector/Annotations.m
 	* Inspector/Contents.m
 	* Inspector/Functions.h
