Fix so that DBKit and MDKit are resolved from the build tree
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@36439 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2013-03-26 Riccardo Mottola <rm@gnu.org>
+
+	* GWMetadata/MDFinder/GNUmakefile.preamble
+	Fix so that DBKit and MDKit are resolved from the build tree and not
+	the installed versions.
+
 2013-03-21 Riccardo Mottola <rm@gnu.org>
 
 	* FSNode/FSNListView.m
