Decode path from error correctly (Thanks Sebastian)
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@36453 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-04-03 Riccardo Mottola <rm@gnu.org>
+
+	* Operation/FileOpInfo.m (fileManager shouldProceedAfterError)
+	Decode path from error correctly (Thanks Sebastian)
+
 2013-03-26 Riccardo Mottola <rm@gnu.org>
 
 	* GWMetadata/MDFinder/GNUmakefile.preamble
