--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2013-04-03 Riccardo Mottola <rm@gnu.org>
 
+	* Operation/FileOpInfo.m
+	* Operation/FileOpInfo.h
+	NSInteger fix.
+
+2013-04-03 Riccardo Mottola <rm@gnu.org>
+
 	* Operation/FileOpInfo.m (fileManager shouldProceedAfterError)
 	Decode path from error correctly (Thanks Sebastian)
 
