Clean up Browser preferences code and allow a max. width of 362.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@36563 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2013-04-22 Riccardo Mottola <rm@gnu.org>
+
+	* GWorkspace/Preferences/BrowserViewerPref.h
+	* GWorkspace/Preferences/BrowserViewerPref.m
+	* GWorkspace/Resources/English.lproj/BrowserViewerPref.gorm
+	Clean up Browser preferences code and allow a max. width of 362.
+
 2013-04-14 Riccardo Mottola <rm@gnu.org>
 
 	* GWorkspace/Resources/English.lproj/Help/SViewer.rtfd
