Change key assignment and management for Viewers, set it on creation of a new viewer and store it inside the viewer-array and not separately.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@37016 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2013-08-24 Riccardo Mottola <rm@gnu.org>
+
+	* GWorkspace/FileViewer/GWViewer.h
+	* GWorkspace/FileViewer/GWViewer.m
+	* GWorkspace/FileViewer/GWViewersManager.h
+	* GWorkspace/FileViewer/GWViewersManager.m
+	* GWorkspace/GWorkspace.m
+	Change key assignment and management for Viewers, set it on creation of a new viewer and store it inside the viewer-array and not separately.
+
 2013-04-22 Riccardo Mottola <rm@gnu.org>
 
 	* GWorkspace/Preferences/BrowserViewerPref.h
