Fix warning and call from sizeDescription sizeDescription() avoiding code duplication. Remove sign info useless with an unsigned parameter.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@37021 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2013-08-27 Riccardo Mottola <rm@gnu.org>
+
+	* FSNode/FSNFunctions.m
+	* FSNode/FSNode.m
+	Fix warning and call from sizeDescription sizeDescription() avoiding code duplication. Remove sign info useless with an unsigned parameter.
+
 2013-08-24 Riccardo Mottola <rm@gnu.org>
 
 	* GWorkspace/FileViewer/GWViewer.h
