operation reference updated to NSUInteger and others.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@37067 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2013-09-11 Riccardo Mottola <rm@gnu.org>
+
+	* Operation/Operation.h
+	* Operation/Operation.m
+	operation reference updated to NSUInteger and others.
+
 2013-08-27 Riccardo Mottola <rm@gnu.org>
 
 	* FSNode/FSNFunctions.m
