--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-09-12 Riccardo Mottola <rm@gnu.org>
+
+	* GWorkspace/Desktop/GWDesktopManager.m
+	Do not propagate file change notification to desktop or dock if they are not active.
+
 2013-09-11 Riccardo Mottola <rm@gnu.org>
 
 	* Operation/Operation.h
