Change [isa class] to [self class]
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@37089 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-09-17 Riccardo Mottola <rm@gnu.org>
+
+	* GWorkspace/GWorkspace.m
+	Change [isa class] to [self class]
+
 2013-09-12 Riccardo Mottola <rm@gnu.org>
 
 	* GWorkspace/Desktop/GWDesktopManager.m
