--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2013-09-25 Riccardo Mottola <rm@gnu.org>
+
+	* Tools/thumbnailer/main.m
+	* Tools/lsfupdater/lsfupdater.m
+	* Tools/fswatcher/fswatcher.m
+	* Inspector/Functions.m
+	Warning fixes.
+
 2013-09-17 Riccardo Mottola <rm@gnu.org>
 
 	* GWorkspace/GWorkspace.m
