* GWMetadata/MDFinder/MDFinder.[h|m]         * GWMetadata/Preferences/StartAppWin.[h|m]         * GWorkspace/Dialogs/StartAppWin.[h|m]         * Inspector/ContentViewers/SoundViewer/SoundViewer.m         * Recycler/Dialogs/StartAppWin.[h|m]         NSProgressIndicator uses doubles, so GWorkspace         should use doubles too
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@37264 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2013-10-20: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
+	* GWMetadata/MDFinder/MDFinder.[h|m]
+	* GWMetadata/Preferences/StartAppWin.[h|m]
+	* GWorkspace/Dialogs/StartAppWin.[h|m]
+	* Inspector/ContentViewers/SoundViewer/SoundViewer.m
+	* Recycler/Dialogs/StartAppWin.[h|m]
+	NSProgressIndicator uses doubles, so GWorkspace
+	should use doubles too
+
 2013-10-18 Riccardo Mottola <rm@gnu.org>
 
 	* GWorkspace/Finder/SearchResults/SearchResults.h
