--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013.10-27 Riccardo Mottola <rm@gnu.org>
+
+	* GWorkspace/FileViewer/GWViewer.m
+	Optimize by changing the selection only if it really changed.
+
 2013-10-25 Riccardo Mottola <rm@gnu.org>
 
 	* GWorkspace/FileViewer/GWViewer.m
