Call updateNameEditor instead of just stopRepNameEditing to make control editable again after the error alert.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@37370 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-11-08 Riccardo Mottola <rm@gnu.org>
+
+	* GWorkspace/FileViewer/GWViewerIconsPath.m (controlTextDidEndEditing)
+	Call updateNameEditor instead of just stopRepNameEditing to make control editable again after the error alert.
+
 2013-11-01 Riccardo Mottola <rm@gnu.org>
 
 	* FSNode/FSNBrowserCell.m
