Remove unused dtslenght.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@37386 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-11-20 Riccardo Mottola <rm@gnu.org>
+
+	* FSNode/FSNBrowserCell.m
+	Remove unused dtslenght.
+
 2013-11-09 Riccardo Mottola <rm@gnu.org>
 
 	* FSNode/FSNBrowser.h
