--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-11-24 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
+	* Apps_wrapper, add wrapper for opennx
+
 2013-11-20 Riccardo Mottola <rm@gnu.org>
 
 	* FSNode/FSNBrowserCell.m
