--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2013-11-25 Riccardo Mottola <rm@gnu.org>
+
+	* FSNode/FSNBrowserCell.h
+	* FSNode/FSNBrowserCell.m
+	Do not use a separate infoFont, but just NSCell's font.
+
 2013-11-24 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
 	* Apps_wrapper, add wrapper for opennx
 
