--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,10 @@
 	* FSNode/FSNBrowserCell.m
 	use fontAttr only inside (cutTitle:toFitWidth:) and remove it as a static-initialized variable.
 
+	* FSNode/FSNTextCell.h
+	* FSNode/FSNTextCell.m 
+	Remove unused dtslenght.
+
 2013-11-25 Riccardo Mottola <rm@gnu.org>
 
 	* FSNode/FSNBrowserCell.h
