Clean up IMP caching, cleaner names and instance variables instead of statics.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@37412 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2013-11-25 Riccardo Mottola <rm@gnu.org>
 
+	* FSNode/FSNBrowserCell.h
+	* FSNode/FSNBrowserCell.m
+	* FSNode/FSNTextCell.h
+	* FSNode/FSNTextCell.m
+	Clean up IMP caching, cleaner names and instance variables instead of statics.
+
+2013-11-25 Riccardo Mottola <rm@gnu.org>
+
 	* FSNode/FSNBrowserCell.m
 	use fontAttr only inside (cutTitle:toFitWidth:) and remove it as a static-initialized variable.
 
