--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-12-12 Riccardo Mottola <rm@gnu.org>
+
+	* FSNode/FSNodeRep.m (mountedVolumes)
+	use setmntent() and _PATH_MOUNTED to retrieve mounted volumes
+
 2013-12-01 Riccardo Mottola <rm@gnu.org>
 
 	* FSNode/FSNBrowserCell.m
