Use specific MAX_FILES_TO_OPEN_DIALOG instead of OPEN_MAX, which is the maximum number of open files
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@37451 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2013-12-12 Riccardo Mottola <rm@gnu.org>
 
+	* GWorkspace/GWorkspace.h
+	* GWorkspace/GWorkspace.m
+	* GWorkspace/FileViewer/GWViewer.m
+	* GWorkspace/FileViewer/GWViewersManager.m
+	* GWMetadata/MDKit/MDKWindow.m
+	Use specific MAX_FILES_TO_OPEN_DIALOG instead of OPEN_MAX, which is the maximum number of open files
+
+2013-12-12 Riccardo Mottola <rm@gnu.org>
+
 	* FSNode/FSNodeRep.m (mountedVolumes)
 	use setmntent() and _PATH_MOUNTED to retrieve mounted volumes
 
